--- a/res/xml/recents.xml
+++ b/res/xml/recents.xml
@@ -22,6 +22,23 @@
         android:key="stock_recents"
         android:title="@string/aosp_recents_title">
 
+        <ListPreference
+            android:key="recents_layout_style"
+            android:title="@string/recents_type_title"
+            android:dialogTitle="@string/recents_type_title"
+            android:entries="@array/recents_type_title_entries"
+            android:defaultValue="0"
+            android:entryValues="@array/recents_type_title_values"/>
+
+        <ListPreference
+            android:key="immersive_recents"
+            android:title="@string/immersive_recents_title"
+            android:summary="@string/immersive_recents_summary"
+            android:dialogTitle="@string/immersive_recents_dialog_title"
+            android:entries="@array/immersive_recents_entries"
+            android:entryValues="@array/immersive_recents_values"
+            android:persistent="false" />
+
         <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
             android:key="show_clear_all_recents"
             android:title="@string/show_clear_all_recents_button_title"
