Hide Lock Icon | Indication & Statusbar [2/2]
Source - https://github.com/omnirom/android_packages_apps_OmniGears/commits/058195dae71c303f9c4df0fb51e97f55e8b88065

--- a/res/xml/lockscreen_items.xml
+++ b/res/xml/lockscreen_items.xml
@@ -145,6 +145,24 @@
             android:summary="@string/wallpaper_tint_summary"
             android:defaultValue="true" />
 
+        <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
+            android:key="hide_lockscreen_status_bar"
+            android:title="@string/hide_lockscreen_status_bar_title"
+            android:summary="@string/hide_lockscreen_status_bar_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
+            android:key="hide_lockscreen_indicator_display"
+            android:title="@string/hide_lockscreen_indicator_display_title"
+            android:summary="@string/hide_lockscreen_indicator_display_summary"
+            android:defaultValue="false" />
+
+        <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
+            android:key="hide_lockscreen_icon"
+            android:title="@string/hide_lockscreen_icon_title"
+            android:summary="@string/hide_lockscreen_icon_summary"
+            android:defaultValue="false" />
+
         <ListPreference
             android:key="torch_power_button_gesture"
             android:title="@string/torch_power_button_gesture_title"
