--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -449,6 +449,7 @@
         <!--item>@string/battery_style_land</item-->
         <item>@string/battery_style_circle</item>
         <item>@string/battery_style_dotted_circle</item>
+        <item>@string/battery_style_square</item>
         <item>@string/battery_style_text</item>
         <item>@string/battery_style_hidden</item>
     </string-array>
@@ -460,6 +461,7 @@
         <item>3</item>
         <item>5</item>
         <item>6</item>
+        <item>7</item>
     </string-array>
 
     <!-- Battery styles -->
