--- a/res/xml/miscellaneous.xml
+++ b/res/xml/miscellaneous.xml
@@ -35,7 +35,7 @@
         android:summary="@string/system_default_animation_summary"
         android:defaultValue="false" />	
 
-    <com.dirtyunicorns.tweaks.preference.SystemSettingSwitchPreference
+    <com.dirtyunicorns.tweaks.preferences.SystemSettingSwitchPreference
         android:key="sensor_block"
         android:title="@string/sensor_block_title"
         android:summary="@string/sensor_block_summary"
