--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -454,7 +454,6 @@
         <item>@string/battery_style_square</item>
         <item>@string/battery_style_text</item>
         <item>@string/battery_style_hidden</item>
-        <item>@string/battery_style_dotted_square</item>
     </string-array>
 
     <string-array name="battery_style_values" translatable="false">
@@ -632,6 +631,20 @@
         <item>@string/lock_clock_font_snowstorm</item>
         <item>@string/lock_clock_font_themeable</item>
         <item>@string/lock_clock_font_union</item>
+        <item>@string/lock_clock_font_adamcg</item>
+        <item>@string/lock_clock_font_alexananeue</item>
+        <item>@string/lock_clock_font_azedo</item>
+        <item>@string/lock_clock_font_bignoodle</item>
+        <item>@string/lock_clock_font_cocobiker</item>
+        <item>@string/lock_clock_font_fester</item>
+        <item>@string/lock_clock_font_jacklane</item>
+        <item>@string/lock_clock_font_monad</item>
+        <item>@string/lock_clock_font_noir</item>
+        <item>@string/lock_clock_font_north</item>
+        <item>@string/lock_clock_font_qontra</item>
+        <item>@string/lock_clock_font_theoutbox</item>
+        <item>@string/lock_clock_font_instruction</item>
+        <item>@string/lock_clock_font_outrunfuture</item>
     </string-array>
 
     <string-array name="lock_clock_fonts_values" translatable="false">
@@ -662,6 +675,20 @@
         <item>24</item>
         <item>25</item>
         <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
     </string-array>
 
     <!-- Lock Date Fonts -->
@@ -693,6 +720,20 @@
         <item>@string/lock_clock_font_riviera</item>
         <item>@string/lock_clock_font_theoutbox</item>
         <item>@string/lock_dateown_font_themeable</item>
+        <item>@string/lock_clock_font_bignoodleital</item>
+        <item>@string/lock_clock_font_blern</item>
+        <item>@string/lock_clock_font_gobold</item>
+        <item>@string/lock_clock_font_metro1920</item>
+        <item>@string/lock_clock_font_neonneon</item>
+        <item>@string/lock_clock_font_roadrage</item>
+        <item>@string/lock_clock_font_snowstorm</item>
+        <item>@string/lock_clock_font_union</item>
+        <item>@string/lock_clock_font_alexananeue</item>
+        <item>@string/lock_clock_font_azedo</item>
+        <item>@string/lock_clock_font_cocobiker</item>
+        <item>@string/lock_clock_font_fester</item>
+        <item>@string/lock_clock_font_north</item>
+        <item>@string/lock_clock_font_qontra</item>
     </string-array>
 
     <string-array name="lock_date_fonts_values" translatable="false">
@@ -723,6 +764,20 @@
         <item>24</item>
         <item>25</item>
         <item>26</item>
+        <item>27</item>
+        <item>28</item>
+        <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
     </string-array>
 
     <!-- Lock Owner Fonts -->
@@ -757,6 +812,17 @@
         <item>@string/lock_clock_font_theoutbox</item>
         <item>@string/lock_dateown_font_themeable</item>
         <item>@string/lock_clock_font_union</item>
+        <item>@string/lock_clock_font_bignoodleital</item>
+        <item>@string/lock_clock_font_blern</item>
+        <item>@string/lock_clock_font_gobold</item>
+        <item>@string/lock_clock_font_inkferno</item>
+        <item>@string/lock_clock_font_metro1920</item>
+        <item>@string/lock_clock_font_neonneon</item>
+        <item>@string/lock_clock_font_riviera</item>
+        <item>@string/lock_clock_font_roadrage</item>
+        <item>@string/lock_clock_font_instruction</item>
+        <item>@string/lock_clock_font_outrunfuture</item>
+        <item>@string/lock_clock_font_snowstorm</item>
     </string-array>
 
     <string-array name="lock_owner_fonts_values" translatable="false">
@@ -790,6 +856,17 @@
         <item>27</item>
         <item>28</item>
         <item>29</item>
+        <item>30</item>
+        <item>31</item>
+        <item>32</item>
+        <item>33</item>
+        <item>34</item>
+        <item>35</item>
+        <item>36</item>
+        <item>37</item>
+        <item>38</item>
+        <item>39</item>
+        <item>40</item>
 </string-array>
 
 </resources>
